# VNECatalog-API

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: product.py
backend/app/crud/: product.py
backend/app/models/: __init__.py  product.py
backend/app/schemas/: product.py
backend/tests/: conftest.py  test_main.py
